# agentic-multimodal-app

./: .env.example  .gitignore  AGENTS.md  DESIGN-EXT.md  DESIGN.md  Makefile  QUICKSTART.md  QUICKSTART_DEVELOPER.md  QUICKSTART_INVESTIGATOR.md  QUICKSTART_USER_GUIDE.md  README.md  TODO.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
app/: Dockerfile  __init__.py  cli.py  llm.py  models.py  orchestrator.py  retrieval.py  server.py  settings.py  tracing.py
benchmark/: README.md  nsight_profile.sh  run_aiperf.sh
data/: README.md  download.py  generate.py
deploy/: PHASE1_AIQ.md  PHASE2_RAG.md  PHASE3_DATA_SIM.md  PHASE4_AUDIO.md  PHASE5_VSS.md  PHASE6_GRAPH.md  PHASE7_EXTENSIONS.md  PHASE8_WORKBENCH.md  PHASE9_PLAN.md  compose.amms.override.yaml  compose.neo4j.yaml  compose.sherlock_mcp.yaml  compose.workbench.yaml  phase1_aiq.sh  phase2_rag.sh  phase3_data_sim.sh  phase4_audio.sh  phase5_vss.sh  phase6_graph.sh  phase7_extensions.sh  phase8_workbench.sh  propagate_env.sh  start_all.sh
docs/: ARCHITECTURE.md  DEPLOY_GB10.md  GPU_SIZING.md  METHOD.md  MODELS.md
eval/: README.md  ground_truth.json  score.py
graph/: __init__.py  ingest_entities.py  schema.py  tools.py
guardrails/: sherlock_forensic_safety_v1.0.0.md  sherlock_forensic_safety_v1.0.0_system_prompt.txt
mcp/: sherlock_mcp.py
observability/: README.md  compose.phoenix.yml  instrumentation.py  nat-config.yml
serving/: Dockerfile  Dockerfile.canary  Dockerfile.meralion  README.md  canary_shim.py  entrypoint.sh  meralion_shim.py  quantize.py
tests/: test_analytics.py  test_eval.py  test_models.py
ui/: .env.example  Dockerfile  (+5 more)
(+171 files in other folders)
