[project]
name = "agentic-multimodal-app"
version = "0.1.0"
description = "Customer-neutral NVIDIA-stack reference: turn a click-through LLM app into an agentic multimodal one. Ships 'Sherlock', an example forensic co-worker agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    # Agent core
    "deepagents>=0.6",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    # API + config
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    # OpenAI-compatible client for local vLLM
    "openai>=1.40",
    # Data stores
    "falkordb>=1.0",
    "pymilvus>=2.4",
    "chromadb>=0.5",
    # Media handling
    "pillow>=10.3",
    "soundfile>=0.12",
    "numpy>=1.26",
    "networkx>=3.2",
]

[project.optional-dependencies]
# GPU graph analytics (RAPIDS); install only where CUDA is present.
analytics = ["cugraph-cu12>=24.10", "cudf-cu12>=24.10"]
# Observability / eval / profiling (P1)
obs = ["nvidia-nat[all]>=1.8", "arize-phoenix-otel>=0.6", "openinference-instrumentation-langchain"]
# Inference optimization (P1)
opt = ["nvidia-modelopt", "aiperf"]
# Live voice mode (optional)
voice = ["pipecat-ai>=0.0.50"]
dev = ["pytest>=8.0", "ruff>=0.6", "httpx>=0.27"]

[project.scripts]
ama = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
